@@ -2,5 +2,6 @@
 0.01 2015-07-xx
 
 + Added DatabaseConnection
++ Added Environment
 + Added Sqlldr and Sqlldr files classes
 
